--- a/src/consts.scss
+++ b/src/consts.scss
@@ -1,5 +1,6 @@
 
-$nav-height: 10rem;
+$nav-height: 8rem;
+$nav-height-collapsed: 12rem;
 
 $root-bg: #f5f5f5;
 $bg: #fff;
